--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "expo": "~48.0.21",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.14",
     "react-native-paper": "4.9.2",
     "react-native-ui-datepicker": "^1.0.9",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.10",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
